--- a/views/expenses_views.xml
+++ b/views/expenses_views.xml
@@ -178,7 +178,7 @@
         <field name="model">farm.expenses</field>
         <field name="arch" type="xml">
             <pivot string="expenses">
-                <field name="projects_id" type="row" interval="month"/>
+                <field name="projects_id" type="row"/>
                 <field name="short_name" type="row"/>
                 <field name="name" type="row"/>
                 <field name="issue_date" type="col"/>
