--- a/views/materials_views.xml
+++ b/views/materials_views.xml
@@ -166,7 +166,7 @@
         <field name="model">farm.materials</field>
         <field name="arch" type="xml">
             <pivot string="materials">
-                <field name="projects_id" type="row" interval="month"/>
+                <field name="projects_id" type="row"/>
                 <field name="short_name" type="row"/>
                 <field name="name" type="row"/>
                 <field name="issue_date" type="col"/>
