--- a/views/materials_views.xml
+++ b/views/materials_views.xml
@@ -175,8 +175,8 @@
 
                 <field name="state"/>
                 <field name="user_id"/>
-                <field name="partner_id" widget="selection"/>
-                <field name="stock_warehouse" widget="selection"/>
+                <field name="partner_id"/>
+                <field name="stock_warehouse"/>
             </pivot>
         </field>
     </record>
