--- a/views/control_views.xml
+++ b/views/control_views.xml
@@ -297,6 +297,54 @@
             </field>
         </record>
 
+        <record id="farm_control_view_calendar" model="ir.ui.view">
+            <field name="name">farm.control.calendar</field>
+            <field name="model">farm.control</field>
+            <field name="arch" type="xml">
+                <calendar string="Control" date_start="init_date" date_stop="next_date" create="1" quick_add="False"
+                          mode="month" color="event_id" hide_time="true" event_limit="5"
+                          event_open_popup="False">
+                    <field name="event_id" filters="1" invisible="1"/>
+                    <field name="action_id" filters="1" invisible="1"/>
+                    <field name="who" filters="1" invisible="1"/>
+                    <field name="name"/>
+                    <field name="company_id" widget="selection" groups="base.group_multi_company" invisible="1"/>
+                </calendar>
+            </field>
+        </record>
+
+        <record id="farm_control_view_pivot" model="ir.ui.view">
+            <field name="name">farm.control.pivot</field>
+            <field name="model">farm.control</field>
+            <field name="arch" type="xml">
+                <pivot string="Control">
+                    <field name="init_date" interval="day"/>
+                    <field name="init_date"/>
+                    <field name="company_id" type="row" groups="base.group_multi_company"/>
+                    <field name="pioasset_id" type="row"/>
+                    <field name="event_id" type="row"/>
+                    <field name="action_id" type="row"/>
+                    <field name="name" type="row"/>
+                    <field name="lead_time"/>
+                    <field name="state" type="col"/>
+                    <field name="next_date" type="col"/>
+                    <field name="who" type="measure"/>
+                </pivot>
+            </field>
+        </record>
+
+        <record id="farm_control_view_graph" model="ir.ui.view">
+            <field name="name">farm.control.graph</field>
+            <field name="model">farm.control</field>
+            <field name="arch" type="xml">
+                <graph string="Control Tickets" type="line" sample="1">
+                    <field name="init_date" interval="day"/>
+                    <field name="state"/>
+                    <field name="event_id" type="measure"/>
+                </graph>
+            </field>
+        </record>
+
         <record id="farm_control_view_search" model="ir.ui.view">
             <field name="name">farm.control.search</field>
             <field name="model">farm.control</field>
@@ -347,12 +395,11 @@
             </field>
         </record>
 
-
         <record id="farm_control_action" model="ir.actions.act_window">
             <field name="name">Farm Control</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">farm.control</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,calendar,pivot,graph</field>
             <field name="context">{'search_default_filter_user': 1}</field>
             <field name="domain">[]</field>
             <field name="help" type="html">
